Fix code on mobile and update ruby version
Updated ruby version to 2.5.4 since netlify has it build in (faster builds)

--- a/_assets/css/code-highlight.scss
+++ b/_assets/css/code-highlight.scss
@@ -7,6 +7,7 @@ pre.highlight {
 	background: #31343f;
 	color: #dee2f7;
 	padding: 0.5em;
+	overflow-x: scroll;
 }
 
 .highlight pre {
